k8s/ingress/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: argocd.alitest.site
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: my-argo-cd-argocd-server
            port:
              number: 80
